# u-machine-learning-course

./: .gitignore  hello.ipynb  pyproject.toml
HW/: HW#1.ipynb
