[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
